jshint and whiskey are dev deps everyone uses: install them globally ('make deps')

--- a/plugins/package.json
+++ b/plugins/package.json
@@ -10,9 +10,11 @@
     "dirsum": ">=0.1.1",
     "httpu": ">=0.0.1",
     "node-uuid": ">=1.1.0",
-    "jshint": "=0.1.9",
     "nopt": ">=1.0.5",
-    "restify": ">=0.1.5",
+    "restify": ">=0.1.5"
+  },
+  "devDependencies": {
+    "jshint": "=0.1.9",
     "whiskey": ">=0.3.2"
   }
 }
