change url for submodules to use git protocol, because https CERT issues in COAL GZ are a PITA

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "deps/node"]
 	path = deps/node
-	url = https://github.com/joyent/node.git
+	url = git://github.com/joyent/node.git
 [submodule "deps/npm"]
 	path = deps/npm
-	url = https://github.com/isaacs/npm.git
+	url = git://github.com/isaacs/npm.git
