'make agent' and bin/amon-agent

--- a/agent/package.json
+++ b/agent/package.json
@@ -21,7 +21,7 @@
   "bin": {
     "amon-agent": "./bin/amon-agent"
   },
-  "scripts": {
+  "DISABLED-scripts": {
     "postinstall": "scripts/postinstall.sh",
     "preuninstall": "scripts/preuninstall.sh"
   },
