--- a/plugins/package.json
+++ b/plugins/package.json
@@ -6,6 +6,7 @@
     "url": "git@git.joyent.com:amon.git"
   },
   "private": true,
+  "main": "lib/index.js",
   "dependencies": {
     "dirsum": ">=0.1.1",
     "httpu": ">=0.0.1",
@@ -14,7 +15,9 @@
     "restify": ">=0.1.5"
   },
   "devDependencies": {
-    "jshint": "=0.1.9",
-    "whiskey": ">=0.3.2"
+    "jshint": "=0.1.9"
+  },
+  "scripts": {
+    "test": "./node_modules/jshint/bin/jshint lib"
   }
 }
