--- a/relay/package.json
+++ b/relay/package.json
@@ -18,6 +18,7 @@
     "node-uuid": ">=1.1.0",
     "nopt": ">=1.0",
     "restify": ">=0.1.2",
+    "sprintf": ">=0.1.1",
     "zsock": ">=1.0.2",
     "zutil": ">=0.1"
   },
