Config flowing from master -> relay -> agent

--- a/relay/package.json
+++ b/relay/package.json
@@ -17,6 +17,7 @@
     "httpu": ">=0.0.1",
     "node-uuid": ">=1.1.0",
     "nopt": ">=1.0",
+    "request": ">=1.9.5",
     "restify": ">=0.1.2",
     "sprintf": ">=0.1.1",
     "zsock": ">=1.0.2",
