Twilio plugin (first pass)

--- a/master/package.json
+++ b/master/package.json
@@ -16,6 +16,7 @@
     "node-uuid": ">=1.1.0",
     "nopt": ">=1.0.5",
     "restify": ">=0.1.5",
+    "retry": ">=0.2.0",
     "riak-js": "=0.4.0rc2",
     "httpu": ">=0.0.1"
   },
