--- a/master/config.coal.json
+++ b/master/config.coal.json
@@ -1,6 +1,17 @@
 {
-  "redis": {
+  "riak": {
     "host": "localhost",
-    "port": 6379
+    "port": 8098
+  },
+  "notificationPlugins": {
+    "sms": {
+      "path": "./notifications/twilio",
+      "config": {
+        "accountSid": "AC1b6e23d616e71d2ea8a9a68e677a9073",
+        "authToken": "8a78b10841a0d662dec04c140a35697b",
+        "from": "+12064555313",
+        "url": "https://s3-us-west-1.amazonaws.com/mcavage-sdc-twilio/alarm.twiml"
+      }
+    }
   }
 }
