--- a/agent/package.json
+++ b/agent/package.json
@@ -25,8 +25,8 @@
   "bin": {
     "amon-agent": "./bin/amon-agent"
   },
-  "DISABLED-scripts": {
-    "postinstall": "scripts/postinstall.sh",
-    "preuninstall": "scripts/preuninstall.sh"
+  "scripts": {
+    "postactivate": "smf_scripts/postinstall.sh",
+    "predeactivate": "smf_scripts/preuninstall.sh"
   }
 }
