--- a/common/package.json
+++ b/common/package.json
@@ -14,16 +14,16 @@
   ],
   "main": "lib/index.js",
   "dependencies": {
-    "dirsum": ">=0.1.1",
-    "httpu": ">=0.0.1",
-    "node-uuid": ">=1.1.0",
-    "nopt": ">=1.0.5",
-    "restify": ">=0.1.5",
-    "sprintf": ">=0.1.1"
+    "dirsum": "0.1.1",
+    "httpu": "0.0.1",
+    "node-uuid": "1.2.0",
+    "nopt": "1.0.6",
+    "restify": "0.3.15",
+    "sprintf": "0.1.1"
   },
   "devDependencies": {
-    "jshint": "=0.1.9",
-    "whiskey": ">=0.3.2"
+    "jshint": "0.2.3",
+    "whiskey": "0.4.1"
   },
   "scripts": {
     "pretest": "./node_modules/jshint/bin/jshint lib tst",
