--- a/plugins/package.json
+++ b/plugins/package.json
@@ -14,14 +14,14 @@
   ],
   "main": "lib/index.js",
   "dependencies": {
-    "dirsum": ">=0.1.1",
-    "httpu": ">=0.0.1",
-    "node-uuid": ">=1.1.0",
-    "nopt": ">=1.0.5",
-    "restify": ">=0.1.5"
+    "dirsum": "0.1.1",
+    "httpu": "0.0.1",
+    "node-uuid": "1.2.0",
+    "nopt": "1.0.6",
+    "restify": "0.3.15"
   },
   "devDependencies": {
-    "jshint": "=0.1.9"
+    "jshint": "0.2.3"
   },
   "scripts": {
     "test": "./node_modules/jshint/bin/jshint lib"
