--- a/relay/package.json
+++ b/relay/package.json
@@ -13,14 +13,14 @@
     "Trent Mick <trent.mick@joyent.com> (http://www.joyent.com)"
   ],
   "dependencies": {
-    "dirsum": ">=0.1.0",
-    "httpu": ">=0.0.1",
-    "node-uuid": ">=1.1.0",
-    "nopt": ">=1.0",
-    "request": ">=1.9.5",
-    "restify": ">=0.1.2",
-    "zsock": ">=1.0.5",
-    "zutil": ">=0.1"
+    "dirsum": "0.1.1",
+    "httpu": "0.0.1",
+    "node-uuid": "1.2.0",
+    "nopt": "1.0.6",
+    "request": "2.0.2",
+    "restify": "0.3.15",
+    "zsock": "1.0.5",
+    "zutil": "0.1.2"
   },
   "bin": {
     "amon-relay": "./bin/amon-relay",
@@ -34,7 +34,7 @@
     "predeactivate": "./smf_scripts/preuninstall.sh"
   },
   "devDependencies": {
-    "jshint": "=0.1.9",
-    "whiskey": ">=0.3.2"
+    "jshint": "0.2.3",
+    "whiskey": "0.4.1"
   }
 }
