MON-10: prepping amon agents for npm-1.x that is being used for sdc agents now
Also switch to versio 1.0.0. I don't want to track SDC version for amon
component versions.

--- a/agent/package.json
+++ b/agent/package.json
@@ -1,17 +1,9 @@
 {
   "name": "amon-agent",
   "description": "Smart DataCenter Monitoring Agent component",
-  "homepage": "https://hub.joyent.com/wiki/display/dev/SDC+Monitoring+and+Alarming",
-  "version": "6.1.0",
-  "repository": {
-    "type": "git",
-    "url": "git@git.joyent.com:amon.git"
-  },
+  "version": "1.0.0",
   "private": true,
-  "contributors": [
-    "Mark Cavage <mark.cavage@joyent.com> (http://www.joyent.com)",
-    "Trent Mick <trent.mick@joyent.com> (http://www.joyent.com)"
-  ],
+	"author": "Joyent (joyent.com)",
   "dependencies": {
     "dirsum": "0.1.1",
     "httpu": "0.0.1",
@@ -26,7 +18,7 @@
     "amon-agent": "./bin/amon-agent"
   },
   "scripts": {
-    "postactivate": "smf_scripts/postinstall.sh",
-    "predeactivate": "smf_scripts/preuninstall.sh"
+    "postinstall": "npm/postinstall.sh",
+    "preuninstall": "npm/preuninstall.sh"
   }
 }
