--- a/relay/smf/amon-relay.smf.in
+++ b/relay/smf/amon-relay.smf.in
@@ -2,14 +2,12 @@
 <!DOCTYPE service_bundle SYSTEM "/usr/share/lib/xml/dtd/service_bundle.dtd.1">
 <service_bundle type="manifest" name="amon-relay">
   <service name="smartdc/agent/amon-relay" type="service" version="@@VERSION@@">
-
     <create_default_instance enabled="true"/>
     <single_instance/>
 
     <dependency name="network" grouping="require_all" restart_on="error" type="service">
       <service_fmri value="svc:/milestone/network:default"/>
     </dependency>
-
     <dependency name="filesystem" grouping="require_all" restart_on="error" type="service">
       <service_fmri value="svc:/system/filesystem/local"/>
     </dependency>
@@ -17,12 +15,12 @@
     <exec_method
       type="method"
       name="start"
-      exec="@@BASEDIR@@/bin/amon-relay -m http://10.99.99.16:8080 &amp;"
+      exec="@@PREFIX@@/bin/amon-relay -m http://10.99.99.16:8080 &amp;"
       timeout_seconds="10">
       <method_context>
         <method_credential user="root" group="staff"/>
         <method_environment>
-          <envvar name='LD_PRELOAD_32' value='/usr/lib/extendedFILE.so.1' />
+          <envvar name="LD_PRELOAD_32" value="/usr/lib/extendedFILE.so.1" />
         </method_environment>
       </method_context>
     </exec_method>
@@ -39,17 +37,17 @@
       </method_context>
     </exec_method>
 
-    <property_group name="startd" type="framework" />
+    <property_group name="startd" type="framework">
+      <propval name="ignore_error" type="astring" value="core,signal"/>
+    </property_group>
     <property_group name="application" type="application" />
 
     <stability value="Evolving"/>
 
     <template>
       <common_name>
-        <loctext xml:lang="C">SDC Amon Relay Daemon</loctext>
+        <loctext xml:lang="C">SDC Amon Relay</loctext>
       </common_name>
     </template>
-
   </service>
-
 </service_bundle>
