--- a/agent/smf/amon-agent.smf.in
+++ b/agent/smf/amon-agent.smf.in
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE service_bundle SYSTEM "/usr/share/lib/xml/dtd/service_bundle.dtd.1">
 <service_bundle type="manifest" name="amon-agent">
-  <service name="smartdc/amon-agent" type="service" version="@@VERSION@@">
+  <service name="smartdc/agent/amon-agent" type="service" version="@@VERSION@@">
     <create_default_instance enabled="true"/>
     <single_instance/>
 
