--- a/master/package.json
+++ b/master/package.json
@@ -1,17 +1,9 @@
 {
   "name": "amon-master",
   "description": "Smart DataCenter Monitoring Master component",
-  "homepage": "https://hub.joyent.com/wiki/display/dev/SDC+Monitoring+and+Alarming",
   "version": "1.0.0",
-  "repository": {
-    "type": "git",
-    "url": "git@git.joyent.com:amon.git"
-  },
+  "author": "Joyent (joyent.com)",
   "private": true,
-  "contributors": [
-    "Mark Cavage <mark.cavage@joyent.com> (http://www.joyent.com)",
-    "Trent Mick <trent.mick@joyent.com> (http://www.joyent.com)"
-  ],
   "dependencies": {
     "node-uuid": "1.2.0",
     "nopt": "1.0.6",
