MON-12: a start at moving Amon master to UFDS
So far this only implements 'GET /pub/:login/contacts' (and comments
out everything else) and relies on some as yet uncommited changes to
UFDS' "schema/".

Also:
- Part way through changing from "config" (the agent config checks
  bundle stuff) to "probes" and using the term "probe" instead of
  "check".
- "config" is now the config options/info for the Amon Master server.
  This has been updated to use factory-settings.json as a base and
  the add settings from a given "-f CONFIG-FILE-PATH"

--- a/master/package.json
+++ b/master/package.json
@@ -9,7 +9,8 @@
     "nopt": "1.0.6",
     "restify": "0.3.15",
     "retry": "0.4.0",
-    "httpu": "0.0.1"
+    "httpu": "0.0.1",
+    "ldapjs": "0.2"
   },
   "devDependencies": {
     "jshint": "0.2.3",
