--- a/common/package.json
+++ b/common/package.json
@@ -19,7 +19,8 @@
     "node-uuid": "1.2.0",
     "nopt": "1.0.6",
     "restify": "0.3.15",
-    "sprintf": "0.1.1"
+    "sprintf": "0.1.1",
+    "lru-cache": "1.0.4"
   },
   "devDependencies": {
     "jshint": "0.2.3",
