MON-12: add '/pub/:login/monitors' endpoints.
Also factors out the UFDS-specifics to a ufdsmodel.js helper module.
Each particular model needs just define a model class following some
interface conventions defined in ufdsmodel.js.

--- a/master/package.json
+++ b/master/package.json
@@ -10,6 +10,7 @@
     "restify": "0.3.15",
     "retry": "0.4.0",
     "httpu": "0.0.1",
+    "sprintf": "0.1.1",
     "ldapjs": "0.2"
   },
   "devDependencies": {
