--- a/agent/package.json
+++ b/agent/package.json
@@ -9,6 +9,7 @@
     "httpu": "0.0.1",
     "nopt": "1.0.6",
     "node-uuid": "1.2.0",
+    "sprintf": "0.1.1",
     "restify": "0.5.4"
   },
   "devDependencies": {
