MON-12: get master sending notifications again (just twillio so far)

--- a/master/config.coal.json
+++ b/master/config.coal.json
@@ -1,7 +1,8 @@
 {
-  "riak": {
-    "host": "localhost",
-    "port": 8098
+  "ufds": {
+    "url": "ldaps://10.88.88.50:636",
+    "rootDn": "cn=root",
+    "password": "secret"
   },
   "notificationPlugins": {
     "sms": {
