--- a/master/config.coal.json
+++ b/master/config.coal.json
@@ -13,6 +13,13 @@
         "from": "+12064555313",
         "url": "https://s3-us-west-1.amazonaws.com/mcavage-sdc-twilio/alarm.twiml"
       }
+    },
+    "email": {
+      "path": "./notifications/email",
+      "config": {
+        "sendmail": "/opt/local/sbin/sendmail -i",
+        "from": "\"Monitoring (no reply)\" <no-reply@joyent.com>"
+      }
     }
   }
 }
