--- a/master/package.json
+++ b/master/package.json
@@ -8,9 +8,10 @@
     "node-uuid": "1.2.0",
     "nopt": "1.0.6",
     "restify": "0.5.4",
-    "retry": "0.4.0",
+    "retry": "0.5.0",
     "httpu": "0.0.1",
     "sprintf": "0.1.1",
+    "nodemailer": "0.2",
     "ldapjs": "0.2"
   },
   "devDependencies": {
