--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/npm"]
 	path = deps/npm
 	url = git://github.com/isaacs/npm.git
+[submodule "deps/restdown"]
+	path = deps/restdown
+	url = git://github.com/trentm/restdown.git
