--- a/master/config.coal.json
+++ b/master/config.coal.json
@@ -5,20 +5,11 @@
     "password": "secret"
   },
   "notificationPlugins": {
-    "sms": {
-      "path": "./notifications/twilio",
-      "config": {
-        "accountSid": "AC1b6e23d616e71d2ea8a9a68e677a9073",
-        "authToken": "8a78b10841a0d662dec04c140a35697b",
-        "from": "+12064555313",
-        "url": "https://s3-us-west-1.amazonaws.com/mcavage-sdc-twilio/alarm.twiml"
-      }
-    },
     "email": {
       "path": "./notifications/email",
       "config": {
         "sendmail": "/opt/local/sbin/sendmail -i",
-        "from": "\"Monitoring (no reply)\" <no-reply@joyent.com>"
+        "from": "\"Amon (no reply)\" <no-reply@joyent.com>"
       }
     }
   }
