--- a/relay/smf/amon-relay.smf.in
+++ b/relay/smf/amon-relay.smf.in
@@ -15,7 +15,7 @@
     <exec_method
       type="method"
       name="start"
-      exec="@@PREFIX@@/bin/amon-relay -m @@AMON_CLIENT_URL@@ &amp;"
+      exec="@@PREFIX@@/bin/amon-relay -m @@AMON_CLIENT_URL@@ -v &amp;"
       timeout_seconds="10">
       <method_context>
         <method_credential user="root" group="staff"/>
