MON-17: tests for relay api parts of master
We provide a "testy" notification plugin here. For this to work the
test config file needs to specify this as the "email" notification
plugin, something like this:

    "email": {
      "path": "./notifications/testy",
      "config": {
        "logPath": "/var/tmp/testy.json",
        "sendmail": "/usr/sbin/sendmail -i",
        "from": "\"Amon\" <no-reply@joyent.com>"
      }
    }

I'll add a tst/config.json.in template.

--- a/master/package.json
+++ b/master/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "node-uuid": "1.2.0",
     "nopt": "1.0.6",
-    "restify": "0.5.4",
+    "restify": "0.5.x",
     "retry": "0.5.0",
     "httpu": "0.0.1",
     "sprintf": "0.1.1",
