MON-19: UFDS caching
Caching UFDS responses and try to be reasonably intelligent about
cache invalidation. Five minute timeout, 100 item LRU caches on the
ListMonitors, GetMonitor, ListProbes, GetProbes endpoints. Five
minute timeout, no limit size cache on the HeadAgentProbes endpoint
(size limit doesn't make sense because we expect *every* zone
value to be queried regularly).

Also some improvements to the UFDS modeling.

Importantly there is a reasonable test suite for this now.

--- a/master/config.mac.json
+++ b/master/config.mac.json
@@ -2,7 +2,8 @@
   "ufds": {
     "url": "ldaps://10.88.88.50:636",
     "rootDn": "cn=root",
-    "password": "secret"
+    "password": "secret",
+    "caching": true
   },
   "notificationPlugins": {
     "sms": {
