--- a/tst/config-master.json
+++ b/tst/config-master.json
@@ -3,7 +3,8 @@
   "ufds": {
     "url": "ldaps://10.88.88.50:636",
     "rootDn": "cn=root",
-    "password": "secret"
+    "password": "secret",
+    "caching": false
   },
   "notificationPlugins": {
     "email": {
