MON-27 (part of): Ensure proper ownership of a machine to put a probe on it.
"PUT /pub/monitors/:monitor/probes/:name" checks (MAPI) that the given
machine is owned by the monitor owner. Also update the test suite to use
real machine/user values.

--- a/master/config.mac.json
+++ b/master/config.mac.json
@@ -5,6 +5,11 @@
     "password": "secret",
     "caching": true
   },
+  "mapi": {
+    "url": "http://10.99.99.8:80",
+    "username": "admin",
+    "password": "TODO:PASSWORD"
+  },
   "notificationPlugins": {
     "sms": {
       "path": "./notifications/twilio",
