--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "async": "0.1",
     "http-signature": "0.9.6",
     "jshint": "0.2.3",
+    "glob": "2.0.9",
     "tap": "0.1"
   },
   "bundledDependences": [
