--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,20 @@
 tmp
 *.swp
 node_modules
-deps/node-install
-amon-*.tgz
-amon-*.tar.bz2
 *.log
-.pkg
-/bootstrap.json
-common/node_modules
-bin/amon-zwatch
-agent/checks
-agent/*.json
 
+/.pkg
+/amon-*.tgz
+/amon-*.tar.bz2
+/deps/node-install
+/bootstrap.json
+/bin/amon-zwatch
+/agent/*.json
 /tst/config.json
 /tst/prep.json
 /master/config.json
 
 # built docs (ignore for now)
-docs/media
-docs/index.html
-docs/index.json
+/docs/media
+/docs/index.html
+/docs/index.json
