--- a/master/smf/amon-master.smf.in
+++ b/master/smf/amon-master.smf.in
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE service_bundle SYSTEM "/usr/share/lib/xml/dtd/service_bundle.dtd.1">
-<service_bundle type="manifest" name="amon">
-  <service name="smartdc/site/amon" type="service" version="0.0.1">
+<service_bundle type="manifest" name="amon-master">
+  <service name="smartdc/site/amon-master" type="service" version="0.0.1">
     <create_default_instance enabled="true"/>
     <single_instance/>
 
