--- a/relay/package.json
+++ b/relay/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "async": "0.1.15",
     "nopt": "1.0.6",
-    "restify": "0.5.6",
+    "node-uuid": "1.3.3",
+    "restify": "0.5.7",
     "zsock": "1.0.5",
     "zutil": "0.1.2"
   },
