--- a/relay/smf/amon-relay.smf.in
+++ b/relay/smf/amon-relay.smf.in
@@ -15,7 +15,7 @@
     <exec_method
       type="method"
       name="start"
-      exec="@@PREFIX@@/lib/node_modules/amon-relay/bin/amon-relay -v &amp;"
+      exec="@@PREFIX@@/lib/node_modules/amon-relay/bin/amon-relay -v -Z &amp;"
       timeout_seconds="10">
       <method_context>
         <method_credential user="root" group="staff"/>
@@ -29,7 +29,7 @@
       </method_context>
     </exec_method>
 
-    <exec_method type="method" name="restart" exec=":kill" timeout_seconds="10">
+    <exec_method type="method" name="refresh" exec=":kill" timeout_seconds="10">
       <method_context>
         <method_credential user="root" group="staff"/>
       </method_context>
