MON-30: move to node v0.6 and restify 1.x (a good start)
Update node, npm, restify and all node module deps to the latest. Much
of the test suite is passing (which just tests the master). The relay
is working (mostly). Haven't touched the agent yet.

--- a/agent/package.json
+++ b/agent/package.json
@@ -5,12 +5,15 @@
   "private": true,
   "author": "Joyent (joyent.com)",
   "dependencies": {
-    "nopt": "1.0.6",
-    "sprintf": "0.1.1",
-    "restify": "0.5.7"
+    "bunyan": "0.6.3",
+    "restify": "1.0.0",
+    "nopt": "1.0.10"
   },
   "scripts": {
     "postinstall": "npm/postinstall.sh",
     "preuninstall": "npm/preuninstall.sh"
+  },
+  "engines": {
+    "node": ">=0.6"
   }
 }
