--- a/common/package.json
+++ b/common/package.json
@@ -6,9 +6,12 @@
   "author": "Joyent (joyent.com)",
   "main": "lib/index.js",
   "dependencies": {
-    "httpu": "0.0.1",
+    "bunyan": "0.6.3",
+    "restify": "1.0.0",
     "node-uuid": "1.2.0",
-    "restify": "0.5.6",
     "lru-cache": "1.0.5"
+  },
+  "engines": {
+    "node": ">=0.6"
   }
 }
