--- a/plugins/package.json
+++ b/plugins/package.json
@@ -6,6 +6,11 @@
   "private": true,
   "main": "lib/index.js",
   "dependencies": {
-    "restify": "0.5.6"
+    "bunyan": "0.6.3",
+    "restify": "1.0.0"
+  },
+  "engines": {
+    "node": ">=0.6"
   }
+
 }
