Switch to <https://github.com/trentm/npm/tree/v1.1.1-wtf-cannot-run> to try to get some info on the "npm WARN ... skipping, cannot run ..." breaking my build in, e.g. <https://jenkins.joyent.us/job/amon/158/console>

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = git://github.com/joyent/node.git
 [submodule "deps/npm"]
 	path = deps/npm
-	url = git://github.com/isaacs/npm.git
+	url = git://github.com/trentm/npm.git
 [submodule "deps/restdown"]
 	path = deps/restdown
 	url = git://github.com/trentm/restdown.git
