--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "deps/node-sdc-clients"]
 	path = deps/node-sdc-clients
 	url = git@git.joyent.com:node-sdc-clients.git
+[submodule "deps/javascriptlint"]
+	path = deps/javascriptlint
+	url = git://github.com/davepacheco/javascriptlint.git
+[submodule "deps/jsstyle"]
+	path = deps/jsstyle
+	url = git://github.com/davepacheco/jsstyle.git
