MON-40: Amon eng-ification (update Makefiles from eng.git, more jsstyle'ing)

--- a/Makefile.targ
+++ b/Makefile.targ
@@ -86,6 +86,7 @@ JSSTYLE		?= jsstyle
 MKDIR		?= mkdir -p
 MV		?= mv
 RESTDOWN	?= restdown
+RESTDOWN_FLAGS	?=
 RMTREE		?= rm -rf
 XMLLINT		?= xmllint --noout
 JSL_FLAGS  	?= --nologo --nosummary
@@ -242,14 +243,10 @@ $(DOC_BUILD)/%: docs/% | $(DOC_BUILD)
 	$(CP) $< $@
 
 docs/%.json docs/%.html: docs/%.restdown | $(DOC_BUILD)
-	$(RESTDOWN) -m $(DOC_BUILD) $<
+	$(RESTDOWN) $(RESTDOWN_FLAGS) -m $(DOC_BUILD) $<
 
 $(DOC_BUILD):
 	$(MKDIR) $@
-
-info:
-	echo "DOC_MEDIA_FILES is '$(DOC_MEDIA_FILES)'"
-	echo "DOC_MEDIA_FILES_BUILD is '$(DOC_MEDIA_FILES_BUILD)'"
 
 $(DOC_MEDIA_DIRS_BUILD):
 	$(MKDIR) $@
