--- a/Makefile.defs
+++ b/Makefile.defs
@@ -22,12 +22,12 @@
 # Mountain Gorilla-spec'd versioning.
 #
 # Need GNU awk for multi-char arg to "-F".
-_AWK=$(shell (which gawk >/dev/null && echo gawk) \
-	|| (which gawk >/dev/null && echo nawk) \
-	|| (which gawk >/dev/null && echo awk))
-_BRANCH=$(shell git symbolic-ref HEAD | $(_AWK) -F/ '{print $$3}')
+_AWK := $(shell (which gawk >/dev/null && echo gawk) \
+	|| (which nawk >/dev/null && echo nawk) \
+	|| echo awk)
+_BRANCH := $(shell git symbolic-ref HEAD | $(_AWK) -F/ '{print $$3}')
 ifeq ($(TIMESTAMP),)
-	TIMESTAMP=$(shell date -u "+%Y%m%dT%H%M%SZ")
+	TIMESTAMP := $(shell date -u "+%Y%m%dT%H%M%SZ")
 endif
-_GITDESCRIBE=g$(shell git describe --all --long --dirty | $(_AWK) -F'-g' '{print $$NF}')
-STAMP=$(_BRANCH)-$(TIMESTAMP)-$(_GITDESCRIBE)
+_GITDESCRIBE := g$(shell git describe --all --long --dirty | $(_AWK) -F'-g' '{print $$NF}')
+STAMP := $(_BRANCH)-$(TIMESTAMP)-$(_GITDESCRIBE)
