MON-46: amon-relay zsock improperly assigned resulting in hung reboots during provision
Also restore '-Z' amon-relay option (listen in all zones).
Also chill out on frequency of polling zones for milestone/multi-user:
1-5s is too frequent with lots of zones.

--- a/relay/smf/amon-relay.smf.in
+++ b/relay/smf/amon-relay.smf.in
@@ -15,7 +15,7 @@
     <exec_method
       type="method"
       name="start"
-      exec="@@PREFIX@@/lib/node_modules/amon-relay/bin/amon-relay -v &amp;"
+      exec="@@PREFIX@@/lib/node_modules/amon-relay/bin/amon-relay -v -Z &amp;"
       timeout_seconds="10">
       <method_context>
         <method_credential user="root" group="staff"/>
