MON-52: 'machine-up' probe (refactor plugins to 'probes' part 1)

--- a/plugins/package.json
+++ b/plugins/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amon-plugins",
-  "description": "Smart DataCenter Monitoring Plugins package",
+  "description": "Smart DataCenter Monitoring Probes package",
   "version": "1.0.0",
   "author": "Joyent (joyent.com)",
   "private": true,
