--- a/tools/mk/Makefile.targ
+++ b/tools/mk/Makefile.targ
@@ -1,3 +1,4 @@
+# -*- mode: makefile -*-
 #
 # Copyright (c) 2012, Joyent, Inc. All rights reserved.
 #
@@ -57,8 +58,6 @@
 #	JSL_FILES_NODE	JavaScript files to check with Node config file.
 #	JSL_FILES_WEB	JavaScript files to check with Web config file.
 #
-#	SMF_MANIFESTS	XML files to check for validity using the SMF DTD.
-#
 # You can also override these variables:
 #
 #	BASH		Path to bash (default: bash)
@@ -83,19 +82,24 @@ CP		?= cp
 CSCOPE		?= cscope
 JSL		?= jsl
 JSSTYLE		?= jsstyle
+MAKE		?= make
 MKDIR		?= mkdir -p
 MV		?= mv
 RESTDOWN	?= restdown
 RESTDOWN_FLAGS	?=
 RMTREE		?= rm -rf
-XMLLINT		?= xmllint --noout
 JSL_FLAGS  	?= --nologo --nosummary
+TAR		?= tar
+
+ifeq ($(shell uname -s),SunOS)
+	MAKE	= gmake
+	TAR	= gtar
+endif
+
 
 #
 # Defaults for other fixed values.
 #
-SMF_DTD		?= tools/service_bundle.dtd.1
-
 BUILD		= build
 CLEAN_FILES	+= $(BUILD)
 DOC_BUILD	= $(BUILD)/docs/public
@@ -152,14 +156,8 @@ check-jsstyle: $(JSSTYLE_FILES:%=%.jsstylechk)
 %.jsstylechk: % $(JSSTYLE_SCRIPT)
 	$(JSSTYLE) $(JSSTYLE_FLAGS) $<
 
-.PHONY: check-manifests
-check-manifests: $(SMF_MANIFESTS:%=%.smfchk)
-
-%.smfchk: %
-	$(XMLLINT) --path $(dir $(SMF_DTD)) --dtdvalid $(SMF_DTD) $^
-
 .PHONY: check
-check: check-jsl check-jsstyle check-bash check-manifests
+check: check-jsl check-jsstyle check-bash
 	@echo check ok
 
 .PHONY: clean
@@ -196,11 +194,11 @@ cscope.files:
 # identify the subdirectories in docs/media, recreate them in
 # $(DOC_BUILD)/media, then do the same with the files.
 #
-DOC_MEDIA_DIRS := $(shell find docs/media -type d | grep -v "^docs/media$$")
+DOC_MEDIA_DIRS := $(shell find docs/media -type d 2>/dev/null | grep -v "^docs/media$$")
 DOC_MEDIA_DIRS := $(DOC_MEDIA_DIRS:docs/media/%=%)
 DOC_MEDIA_DIRS_BUILD := $(DOC_MEDIA_DIRS:%=$(DOC_BUILD)/media/%)
 
-DOC_MEDIA_FILES := $(shell find docs/media -type f)
+DOC_MEDIA_FILES := $(shell find docs/media -type f 2>/dev/null)
 DOC_MEDIA_FILES := $(DOC_MEDIA_FILES:docs/media/%=%)
 DOC_MEDIA_FILES_BUILD := $(DOC_MEDIA_FILES:%=$(DOC_BUILD)/media/%)
 
