--- a/tools/mk/Makefile.targ
+++ b/tools/mk/Makefile.targ
@@ -82,18 +82,17 @@ CP		?= cp
 CSCOPE		?= cscope
 JSL		?= jsl
 JSSTYLE		?= jsstyle
-MAKE		?= make
 MKDIR		?= mkdir -p
 MV		?= mv
 RESTDOWN	?= restdown
 RESTDOWN_FLAGS	?=
 RMTREE		?= rm -rf
 JSL_FLAGS  	?= --nologo --nosummary
-TAR		?= tar
 
 ifeq ($(shell uname -s),SunOS)
-	MAKE	= gmake
-	TAR	= gtar
+	TAR	?= gtar
+else
+	TAR	?= tar
 endif
 
 
@@ -101,7 +100,7 @@ endif
 # Defaults for other fixed values.
 #
 BUILD		= build
-CLEAN_FILES	+= $(BUILD)
+DISTCLEAN_FILES += $(BUILD)
 DOC_BUILD	= $(BUILD)/docs/public
 
 #
@@ -163,6 +162,10 @@ check: check-jsl check-jsstyle check-bash
 .PHONY: clean
 clean::
 	-$(RMTREE) $(CLEAN_FILES)
+
+.PHONY: distclean
+distclean:: clean
+	-$(RMTREE) $(DISTCLEAN_FILES)
 
 CSCOPE_FILES = cscope.in.out cscope.out cscope.po.out
 CLEAN_FILES += $(CSCOPE_FILES)
