MON-58: move to not public and published expiring-lru-cache

--- a/common/package.json
+++ b/common/package.json
@@ -8,8 +8,7 @@
   "dependencies": {
     "bunyan": "0.6.8",
     "restify": "1.0.1",
-    "node-uuid": "1.2.0",
-    "lru-cache": "1.0.5"
+    "node-uuid": "1.2.0"
   },
   "engines": {
     "node": ">=0.6"
