--- a/master/config.coal.json
+++ b/master/config.coal.json
@@ -10,6 +10,10 @@
     "username": "admin",
     "password": "TODO:PASSWORD"
   },
+  "redis": {
+    "host": "10.99.99.21",
+    "port": "6379"
+  },
   "notificationPlugins": {
     "email": {
       "path": "./notifications/email",
