--- a/tools/jsl.node.conf
+++ b/tools/jsl.node.conf
@@ -42,7 +42,7 @@
 +multiple_plus_minus          # unknown order of operations for successive plus (e.g. x+++y) or minus (e.g. x---y) signs
 +nested_comment               # nested comment
 +no_return_value              # function {name} does not always return a value
-+octal_number                 # leading zeros make an octal number
+-octal_number                 # leading zeros make an octal number
 +parseint_missing_radix       # parseInt missing radix parameter
 +partial_option_explicit      # the "option explicit" control comment, if used, must be in the first script tag
 +redeclared_var               # redeclaration of {name}
