--- a/agent/package.json
+++ b/agent/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "bunyan": "0.6.8",
     "restify": "1.0.1",
-    "nopt": "1.0.10"
+    "nopt": "1.0.10",
+    "zutil": "0.2.1"
   },
   "scripts": {
     "postinstall": "npm/postinstall.sh",
